# finradar

./: .env.example  .gitignore  Dockerfile  LICENSE  docker-compose.yml  pyproject.toml
dashboard/: api_client.py  components.py  main.py
dashboard/pages/: 1_📊_Feed.py  1_📋_Latest.py  2_📄_Article.py  2_📊_Analytics.py  3_📄_Article.py  4_🔖_Bookmarks.py
finradar/: config.py  main.py
finradar/alerts/: __init__.py  discord.py  dispatcher.py
finradar/api/: __init__.py  deps.py
finradar/api/routes/: __init__.py  feed.py  feedback.py  ingest.py  news.py  search.py
finradar/clustering/: __init__.py  clusterer.py
finradar/collectors/: __init__.py  base.py  newsapi_collector.py  rss_collector.py  x_collector.py  youtube_collector.py
finradar/db/: __init__.py  session.py
finradar/models/: __init__.py  feedback.py  news.py  topic.py
finradar/personalization/: __init__.py  engine.py
finradar/processors/: __init__.py  embeddings.py  llm_processor.py  sentiment.py
finradar/schemas/: __init__.py  news.py
finradar/search/: __init__.py  query_expansion.py
finradar/tasks/: __init__.py  celery_app.py  collection_tasks.py
scripts/: backfill_ko_enrich.py  benchmark_embedding_models.py  cluster_dryrun.py  cluster_now.py  init_db.sql  migrate_001_llm_tracking.sql  migrate_002_clustering.sql  migrate_003_raw_data.sql  migrate_004_published_at.sql  migrate_005_feedback_user.sql  migrate_006_llm_sentiment.sql  reembed_all.py  repair_ko_body_fetch.py  requeue_ko_enrich.py  test_api.py  test_en_rss.py  test_kr_rss.py  test_kr_rss2.py  test_newsapi.py  test_rss.py  test_trafilatura_ko.py  trigger_collect.py
